--- a/templates/form.html
+++ b/templates/form.html
@@ -1,3 +1,4 @@
+import {Checkboxes} from 
 <form class="form">
   <h2>Tell us what you think about your rubber duck!</h2>
   <div class="form__group radio">
@@ -6,7 +7,7 @@
   </div>
   <div class="form__group">
     <h3>How do you like to spend time with your rubber duck</h3>
-    <!-- checkboxes go here -->
+   {Checkboxes/}
   </div>
   <label
     >What else have you got to say about your rubber duck?<textarea
